src/objects/QPMS__Change_Management__c.object
<CustomObject>
    <description>This is a Change Management object.</description>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>IF(ISBLANK( QPMS__Closed_Date__c ),TODAY() - DATEVALUE(CreatedDate), QPMS__Closed_Date__c - DATEVALUE( CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_Workflow_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Workflow Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change DueDate</fullName>
                </value>
                <value>
                    <fullName>Post Change Approval</fullName>
                </value>
                <value>
                    <fullName>Pre Change Approval</fullName>
                </value>
                <value>
                    <fullName>Resolution Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalStatus__c</fullName>
        <label>ApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>pending</fullName>
                </value>
                <value>
                    <fullName>rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>hold the value of approval group</description>
        <inlineHelpText>hold the value of approval group</inlineHelpText>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <label>Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ApproverSequence__c</fullName>
        <label>ApproverSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_process_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver process complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditNumber__c</fullName>
        <description>Audit Number</description>
        <formula>QPMS__Audit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Number__c</fullName>
        <label>Audit Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unit1</fullName>
                </value>
                <value>
                    <fullName>Unit2</fullName>
                </value>
                <value>
                    <fullName>Unit3</fullName>
                </value>
                <value>
                    <fullName>Unit4</fullName>
                </value>
                <value>
                    <fullName>Unit5</fullName>
                </value>
                <value>
                    <fullName>UNIT 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Name__c</fullName>
        <description>Stores Value of CAPA numbering schema Name</description>
        <formula>QPMS__CAPA_Number__r.QPMS__CAPA_Name__c</formula>
        <label>CAPA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA Number</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CR_Approval_Required__c</fullName>
        <description>Is approvel required or not</description>
        <label>CR Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CR_Approval_Signed_Off_Details__c</fullName>
        <description>captured the change management approval signed off details</description>
        <inlineHelpText>captured the change management approval signed off details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CR_Name__c</fullName>
        <label>CR Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CR_Number__c</fullName>
        <formula>HYPERLINK($Setup.QPMS__QC_settings__c.QPMS__URL__c+&apos;/apex/ChangeManagement?Id=&apos;+Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ChangeType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Template</label>
        <referenceTo>QPMS__Change_Type__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Category__c</fullName>
        <label>Change Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Category 1</fullName>
                    <isActive>false</isActive>
                    <label>Category 1</label>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                    <isActive>false</isActive>
                    <label>Category 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Change_Duration__c</fullName>
        <label>Change Duration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Justification__c</fullName>
        <label>Change Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Request_Scope__c</fullName>
        <label>Change Request Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Request_Type__c</fullName>
        <label>Change Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                    <default>true</default>
                    <label>Document</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QPMS__Change_Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Expire</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Closed__c</fullName>
        <formula>OR(ISPICKVAL( QPMS__Status__c , &apos;Closed&apos;),ISPICKVAL( QPMS__Status__c , &apos;Void&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_General_Sub_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint General Sub Task</label>
        <referenceTo>QPMS__Complaint_General_Sub_Task__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is used to save complaint name</description>
        <label>Complaint Number</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_Date__c</fullName>
        <description>Record Created Date</description>
        <inlineHelpText>Record Created Date</inlineHelpText>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Current_Revision__c</fullName>
        <label>Current Revision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Doc_Change__c</fullName>
        <formula>ISPICKVAL( QPMS__Status__c , &apos;Document Change Order&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Name__c</fullName>
        <formula>QPMS__Document_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Number__c</fullName>
        <inlineHelpText>Documents having child documents with Draft Revision/Temp will not display in Document Number field!</inlineHelpText>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Emergency_Change__c</fullName>
        <label>Emergency Change?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Document_Information_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Document Information Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Impact_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Impact Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Approval__c</fullName>
        <defaultValue>&apos;NONE&apos;</defaultValue>
        <description>To save Escalaton rule for all approvels</description>
        <label>Escalation Rule for Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Task__c</fullName>
        <label>Escalation Rule for Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__General_Sub_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>QPMS__General_Sub_Task__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Impact_Assesment__c</fullName>
        <label>Impact Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Impacted_Sites__c</fullName>
        <label>Impacted Sites</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__ImplementTaskStatus__c</fullName>
        <label>ImplementTaskStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for submitter used in approval class/trigger</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMg_Task3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <formula>QPMS__Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <defaultValue>&apos;Global_Quality_Group&apos;</defaultValue>
        <description>Stores the logged in user site public group</description>
        <inlineHelpText>Stores the logged in user site public group</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__IsRejected_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Name__c</fullName>
        <formula>QPMS__NC_Number__r.QPMS__Non_Conformance_Name__c</formula>
        <label>NC Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NC Number</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <description>This field hold the record name as hyperlink and can be used in navigations where ever is required</description>
        <formula>HYPERLINK(&apos;/&apos;&amp; Id ,  QPMS__CR_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field hold the record name as hyperlink and can be used in navigations where ever is required</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <label>Note To Approver Owner/DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Resolution__c</fullName>
        <description>This field is used to store Note to Approver value in Resolution page</description>
        <label>Note To Reviewer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occurrence</label>
        <referenceTo>QPMS__Risk_Occurrence__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Other__c</fullName>
        <label>Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_ManagementTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__PostChangeApprovalStatus__c</fullName>
        <label>PostChangeApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__PostChangeNoteToApprover__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Post_Change_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Change Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Post_Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PreChangeApprovalStatus__c</fullName>
        <label>PreChangeApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__PreChangeNoteToApprover__c</fullName>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__PreChangeStatus__c</fullName>
        <label>PreChangeStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Pre_Change_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Change Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Pre_Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority</label>
        <referenceTo>QPMS__Risk_Priority__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Process_Name__c</fullName>
        <formula>QPMS__Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>QPMS__Process__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Name__c</fullName>
        <formula>QPMS__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <label>Reason For Void</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordTypeName__c</fullName>
        <description>Created for the record type name of CM and used in the CR_Trigger_Handler class.</description>
        <label>RecordTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Approval_Required__c</fullName>
        <description>This field is used to store approval required in resolution</description>
        <label>Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Approval_Status__c</fullName>
        <description>Resolution Approval Status</description>
        <label>Resolution Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Closed_Comment__c</fullName>
        <label>Resolution Closed Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Workflow</fullName>
                </value>
                <value>
                    <fullName>Document Change Order</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Risk_Description__c</fullName>
        <label>Risk Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <description>Used for finding the current sequence</description>
        <label>Sequence Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>